/**
 * Copyright (C) 2011-2012 Barchart, Inc. <http://www.barchart.com/>
 *
 * All rights reserved. Licensed under the OSI BSD License.
 *
 * http://www.opensource.org/licenses/bsd-license.php
 */

//
/**
 * https://developers.google.com/protocol-buffers/docs/proto
 *
 * factory for packets
 */

//
package barchart; // non-java (C, C++, etc) package name space

//
option java_package = "com.barchart.proto.buf.data";
option java_outer_classname = "PacketSpec";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;
//
option optimize_for = SPEED;

//
import "MessageSpec.proto";

//
enum PacketType {
	DATA = 1;
}

// market data packet (knows that packet body is a message list)
message MarketPacket {
//
	optional sint32 channel = 1; // packet channel number
	optional sint64 sequence = 2; // packet sequence number inside the channel
	optional sint64 timeStamp = 3; // base for entries; time in format 2012-12-31T23:59:59.123 UTC -> 20121231235959123
	//
	optional PacketType type = 4; // packet body selector
	//
	repeated MarketMessage message = 5; // list of messages
	//
}

// decode message list with no header fields
message MarketMessageCodec {
//
	repeated MarketMessage message = 5; // list of messages
	//
}
