/**
 * https://developers.google.com/protocol-buffers/docs/proto
 *
 * factory for messages
 */
//
package barchart; // non-java (C, C++, etc) package name space

//
option java_package = "com.barchart.proto.buf";
option java_outer_classname = "MessageSpec";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;
//
option optimize_for = SPEED;

// message options descriptor
import "google/protobuf/descriptor.proto";

// message fields
import "FieldSpec.proto";

// define static message fields for meta data
extend google.protobuf.MessageOptions {
	optional sint32 optionTypeIndex = 50001; // message type index
	optional string optionExtensionPrefix = 50002; // message type name prefix
	optional string optionEnumNameSuffix = 50003; // message enum name suffix
}

// message type
// note: order by most frequent first
// note: must use suffix due to global scope
enum MessageType {
//
	MarketDataType = 50;
	MarketNewsType = 51;
	//
	DataSubscribeRequestType = 100;
	DataSubscribeResponseType = 101;
	//
	NewsSubscribeRequestType = 102;
	NewsSubscribeResponseType = 103;
	//
	InstrumentRequestType = 104;
	InstrumentResponseType = 105;
	//
	LoginRequestType = 106;
	LoginResponseType = 107;
	//
	HeartBeatType = 127;
	//
	// keep under 127
}

// forward declaration of sub types / extensions
// note: keep in sync with enum
// note: must use prefix due to global scope
extend Base {
//
	optional MarketData messageMarketData = 50;
	optional MarketNews messageMarketNews = 51;
	//
	optional DataSubscribeRequest messageDataSubscribeRequest = 100;
	optional DataSubscribeResponse messageDataSubscribeResponse = 101;
	//
	optional NewsSubscribeRequest messageNewsSubscribeRequest = 102;
	optional NewsSubscribeResponse messageNewsSubscribeResponse = 103;
	//
	optional InstrumentRequest messageInstrumentRequest = 104;
	optional InstrumentResponse messageInstrumentResponse = 105;
	//
	optional LoginRequest messageLoginRequest = 106;
	optional LoginResponse messageLoginResponse = 107;
	//
	optional HeartBeat messageHeartBeat = 127;
	//
}

// message base for extensions / sub types
message Base {
	option (optionEnumNameSuffix) = "Type"; // rule for enum names
	option (optionExtensionPrefix) = "message"; // rule for extension names
	extensions 50 to 127; // message polymorph range
	//
	optional MessageType type = 1; // message type selector
	optional sint64 sequence = 2; // message sequence number
	optional sint64 timeStamp = 3; // message time stamp, millisUTC
}

// ##################################################

// one and only market data state change message
message MarketData {
//
	enum Type {
		UPDATE = 0;
		SNAPSHOT = 1;
		RESET_ALL = 2;
		RESET_BOOK = 3;
		RESET_CUVOL = 4;
	}

	//
	optional Type type = 1;
	//
	optional sint64 marketId = 2; // market guid; base for entries
	optional sint64 sequence = 3; // market sequence number; base for entries
	optional sint64 timeStamp = 4; // market time stamp, millisUTC; base for entries
	//
	repeated MarketDataEntry entry = 5; // list of entries
	//
	optional sint32 priceExponent = 6; // ; base for entries
	optional sint32 sizeExponent = 7; // ; base for entries
	//
	optional sint32 tradeDate = 8; // base for entries; days since ISO Unix Epoch
}

// ##################################################

//
message MarketNews {
	enum Type {
		MARKET_UPDATE = 0;
		BREAKING_NEWS = 1;
	}

	optional Type type = 1;
	optional sint64 marketId = 2;
	repeated MarketNewsEntry entry = 3;
}

// ##################################################

// login from client to server
message LoginRequest {
	optional string username = 1;
	optional string password = 2;
}

// response from server to client
message LoginResponse {
	enum Status {
		SUCCESS = 1;
		FAILURE = 2;
	}

	optional Status status = 1;
	optional string comment = 2;
}

// ##################################################

//
message InstrumentRequest {
	optional sint64 marketId = 1;
}

// minimum market-state required entries
message InstrumentResponse {
	optional sint64 marketId = 1;
	optional Decimal priceIncrement = 2;
	optional string marketDescriptor = 3; // complete json object
}

// ##################################################

//
message DataSubscribeRequest {
	enum Type {
		UPDATE = 0;
		SNAPSHOT = 1;
	}

	repeated Type type = 1; // empty means none
	optional sint64 marketId = 2;
}

//
message DataSubscribeResponse {
	enum Type {
		SUCCESS = 0;
		NOT_AVAILABLE = 1;
		NOT_AUTHORIZED = 2;
	}

	optional Type type = 1;
	optional sint64 marketId = 2;
	optional string comment = 3;
}

// ##################################################

//
message NewsSubscribeRequest {
	enum Type {
		NONE = 0;
		UPDATE = 1;
		SNAPSHOT = 2;
	}

	repeated Type type = 1;
	optional sint64 marketId = 2;
}

message NewsSubscribeResponse {
	enum Type {
		SUCCESS = 0;
		NOT_AVAILABLE = 1;
		NOT_AUTHORIZED = 2;
	}

	optional Type type = 1;
	optional sint64 marketId = 2;
	optional string comment = 3;
}

// ##################################################

// bidirectional keep alive
message HeartBeat {
	optional sint64 interval = 1;
}

// ##################################################
